document the new pngs panel controls

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -68,6 +68,9 @@ See the file <tt>COPYING.TXT</tt> in the distribution folder.</p>
 <li><a href='#Extras'>The Extras</a> documents the miscellania in the <tt>extras</tt> folder.</li>
 </ul>
 <h2 id='New'>What's New in This Version</h2>
+<h3>What's New in 1.01.01 (6 Nov. 2012)</h3>
+<p>The Edit > Titlecase command now operates correctly when the selected words are uppercase or mixed-case.</p>
+<p>The Pngs panel now features new zoom controls, see <a href='#Pngs'>The Pngs Panel</a> below.</p>
 <h3>What's New in 1.01 (24 Oct. 2012)</h3>
 <p>Fixes:</p>
 <ul>
@@ -224,6 +227,7 @@ of the filename or suffix rules listed <a href='#Encodings'>above</a> to indicat
 <h2 id='Pngs'>The Pngs Panel</h2>
 <p>Click the Pngs tab to display the Pngs panel, which displays scan images loaded from the <tt>pngs</tt> folder. It normally displays the image that corresponds to the present edit cursor position.</p>
 <p>When the focus is in the Pngs panel (click in it), ctl-hyphen zooms out and ctl-plus zooms in. The current zoom setting is remembered from session to session. If the image is larger than the panel, scroll bars appear. Use them to center the text. The scroll position is kept as pages change.</p>
+<p>At the bottom of the panel is a slider with which you can adjust the zoom from 15% to 250%. Beside it, the button "To Width" causes the display to zoom to fill the width of the panel with the text. "To Height" zooms it to fill the height of the panel with the text. Both of these buttons work by scanning the image pixel by pixel to find the outermost dark spots. Many scan images have random blots and dots in the margins that make PPQT think the text is wider or taller than it looks to your eye.</p>
 <p>You can use the PgUp and PgDn keys in the Pngs panel to flip backward and forward through the scan images. However, as soon as you move the text edit cursor, the Pngs panel snaps back to the image corresponding to the cursor.</p>
 <h2 id='Notes'>The Notes Panel</h2>
 <p>Click the Notes tab. This panel is a simple plain-text editor to hold notes on the book in progress. Whatever contents you type here are saved
