--- a/pqHelp.html
+++ b/pqHelp.html
@@ -68,19 +68,11 @@ See the file <tt>COPYING.TXT</tt> in the distribution folder.</p>
 <li><a href='#Extras'>The Extras</a> documents the miscellania in the <tt>extras</tt> folder.</li>
 </ul>
 <h2 id='New'>What's New in This Version</h2>
-<h3>What's New as of 4 December 2012</h3>
-<p>A number of small fixes thanks to input from users julo and Bibimbop:</p>
-<ul>
-<li>Corrected the label of the zoom slider on the Pngs panel.</li>
-<li>Cleared the default filename from the Save Find Buttons dialog to reduce the chance of saving over the document(!).</li>
-<li>Moved the line number field to the left of the status bar.</li>
-<li>Fixed ctl-s and ctl-shift-s to work as shortcuts for File>Save and Save-As in Ubuntu and Windows.</li>
-<li>Fixed the previous-strings popups in Find and Replace to work correctly on Windows, and to not show a scrap of a character on Ubuntu.</li>
-<li>On ctl-f when focus goes to the Find panel, the Find text is all-selected so it is easy to type a new find string.</li>
-<li>The View > Dictionary dialog presents dictionary names in sorted order and with the current dictionary selected.</li>
-<li>Proper CRLF line-ends written on Windows.</li>
-<li>The document-modified indicator turns on more reliably in some cases.</li>
-</ul>
+<p>(See also <a href='#OldNew'>What Was New</a> for previous changes.)</p>
+<h3>What's New as of 22 December 2012</h3>
+<p>Just one change: at the request of user Bibimbop, after any successful
+search the found text is centered in the text window. If the found selection is
+large, the top of the selection is always visible although the end of the selection might be out of sight.</p>
 <h2 id='Files'>Files and Folders</h2>
 <p>PPQT edits one book text at a time, for example <tt>afinebook.txt</tt>. 
 If you need to open a second document (for example, a commented copy from Smooth Reading), just start a second copy of PPQT.</p>
@@ -783,6 +775,33 @@ superscripts, subscripts, Side notes, Illustrations, and typo markups to HTML.</
 <li><tt>header.html</tt> contains the opening of an HTML etext including the <tt>&lt;!DOCTYPE></tt> and<tt>&lt;head></tt> statements and the full CSS style section described in the PGDP Wiki under "CSS Cookbook" (but with some classnames modified to match what PPQT generates).</li>
 </ul>
 <h2 id='OldNew'>What Was New</h2>
+<h3>What's New as of 10 December 2012</h3>
+<ul>
+<li>Clicking one of the Replace buttons in the Find panel (or using ctl-= or ctl-t in the edit panel, which are the same) will only do the replace if the current selection was created by a find. If the selection has changed since a find was last done, the replace is not done and PPQT beeps.</li>
+<li>When you double-click a character in the Chars panel, or a word 
+in the Words panel, PPQT does a find-first for that character or word as before,
+but it does not make the Find panel visible. You still see the Chars or Words
+panel.</li>
+<li>Also, the Respect Case switch is set for these searches, and the
+Whole Word switch is set for a Word search.</li>
+<li>The File menu shortcuts for Open, New etc. now work as soon as the
+program starts up, without having to display the File menu once.</li>
+<li>The keyboard shortcuts for the various panels have been removed because they potentially or actually conflict with standard menu shortcuts. Panels can only be displayed by clicking on their tabs.</li>
+<li>The find buttons in extras/unbalancedRE.utf have been extended to find some more cases of unbalanced markup. However they can't find everything, see the notes in the file.</li>
+</ul>
+<h3>What's New as of 4 December 2012</h3>
+<p>A number of small fixes thanks to input from users julo and Bibimbop:</p>
+<ul>
+<li>Corrected the label of the zoom slider on the Pngs panel.</li>
+<li>Cleared the default filename from the Save Find Buttons dialog to reduce the chance of saving over the document(!).</li>
+<li>Moved the line number field to the left of the status bar.</li>
+<li>Fixed ctl-s and ctl-shift-s to work as shortcuts for File>Save and Save-As in Ubuntu and Windows.</li>
+<li>Fixed the previous-strings popups in Find and Replace to work correctly on Windows, and to not show a scrap of a character on Ubuntu.</li>
+<li>On ctl-f when focus goes to the Find panel, the Find text is all-selected so it is easy to type a new find string.</li>
+<li>The View > Dictionary dialog presents dictionary names in sorted order and with the current dictionary selected.</li>
+<li>Proper CRLF line-ends written on Windows.</li>
+<li>The document-modified indicator turns on more reliably in some cases.</li>
+</ul>
 <h3>What's New in 1.01.01 (6 Nov. 2012)</h3>
 <p>The Edit > Titlecase command now operates correctly when the selected words are uppercase or mixed-case.</p>
 <p>The Pngs panel now features new zoom controls, see <a href='#Pngs'>The Pngs Panel</a> below.</p>
