--- a/pqHelp.html
+++ b/pqHelp.html
@@ -1,7 +1,7 @@
 <!--
-__version__ = "0.1.0" # refer to PEP-0008
+__version__ = "1.02.0" # refer to PEP-0008
 __author__  = "David Cortesi"
-__copyright__ = "Copyright 2011, 2012 David Cortesi"
+__copyright__ = "Copyright 2011, 2012, 2013 David Cortesi"
 __maintainer__ = "?"
 __email__ = "tallforasmurf@yahoo.com"
 __status__ = "first-html-draft"
